--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary_color">#FF5722</color>
+    <color name="primary_dark_color">#FFFFFFFF</color>
+    <color name="secondary_color">#293283</color>
 </resources>
