--- a/app/src/main/res/layout/activity_crear_empleado.xml
+++ b/app/src/main/res/layout/activity_crear_empleado.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/numero_identificacion"
+        android:hint="@string/cedula"
         android:inputType="number" />
 
     <EditText
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/telefono"
+        android:hint="@string/celular"
         android:inputType="phone" />
 
     <EditText
