--- a/app/src/main/res/layout/item_empleado.xml
+++ b/app/src/main/res/layout/item_empleado.xml
@@ -20,6 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="138dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5sp"
                 tools:src="@tools:sample/avatars" />
 
             <LinearLayout
