Guardar empleado con funcionalidad basica

--- a/app/src/main/res/layout/activity_crear_empleado.xml
+++ b/app/src/main/res/layout/activity_crear_empleado.xml
@@ -61,7 +61,7 @@
         android:layout_marginTop="6sp" />
 
     <EditText
-        android:id="@+id/txtTelefono"
+        android:id="@+id/txtCelular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -86,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="guardar"
             android:text="@string/guardar" />
 
         <Button
@@ -93,6 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="limpiar"
             android:text="@string/limpiar" />
     </LinearLayout>
 </LinearLayout>
