--- a/app/src/main/res/layout/activity_detalle_empleado.xml
+++ b/app/src/main/res/layout/activity_detalle_empleado.xml
@@ -58,7 +58,7 @@
             android:layout_height="189dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8sp"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:srcCompat="@android:drawable/ic_menu_gallery" />
 
         <TableLayout
             android:id="@+id/tblTablaDetalle"
