--- a/app/src/main/res/layout/activity_detalle_empleado.xml
+++ b/app/src/main/res/layout/activity_detalle_empleado.xml
@@ -32,15 +32,16 @@
             android:id="@+id/menu_eliminar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="eliminar"
             android:src="@android:drawable/ic_menu_delete"
-            fab:fab_label="Eliminar C"
+            fab:fab_label="@string/eliminar"
             fab:fab_size="mini" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
